tests/rosetta/out/Java/call-a-function-8.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// call-a-function-8.mochi
import java.util.*;

public class CallAFunction8 {
    static String mapString(String s, Object f) {
        String out = "";
        int i = 0;
        while (i < s.length()) {
            out = out + f(s.substring(i, i + 1));
            i = (int)(i + 1);
        }
        return out;
    }
    static void main() {
        Object fn = r -> (Objects.equals(r, " ") ? "" : r);
        mapString("Spaces removed", fn);
        mapString("Test", r -> lower(r));
        mapString("shift", r -> r);
    }
    public static void main(String[] args) {
        main();
    }
}
